# IT-Cross-2017-Task2

BrownianTrajectory/: CMakeLists.txt
BrownianTrajectory/BrownianTrajectoryLib/: BrownianTrajectoryLib.cpp  BrownianTrajectoryLib.h  CMakeLists.txt
BrownianTrajectory/GraphUI/: CMakeLists.txt  main-window.cpp  main.cpp
BrownianTrajectory/GraphicUI/: CMakeLists.txt  about.ui  data_pane.ui  main-window.cpp  main-window.h  main.cpp
